# kvakk-git-tools

./: .bumpversion.cfg  .cookiecutter.json  .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  Pipfile  README.md  SECURITY.md  flake.nix  noxfile.py  pyproject.toml  sonar-project.properties
.github/workflows/: constraints.txt  docs.yml  lint.yml  main.yml  platforms.yml  publish.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md
existing/dapla/: configure-git-config.bash
gitattributes/: .gitattributes
gitignore/: .gitignore
kvakk_git_tools/: __init__.py  ssb_gitconfig.py  validate_ssb_gitconfig.py  validate_ssb_local_git_files.py
kvakk_git_tools/recommended/: gitconfig-dapla-lab  gitignore
recommended/: gitattributes  gitconfig-adm-mac  gitconfig-adm-windows  gitconfig-dapla  gitconfig-prod-linux  gitconfig-prod-mac-citrix  gitconfig-prod-windows-citrix  gitignore
src/kvakk_git_tools/: __init__.py  ssb_gitconfig.py  validate_ssb_gitconfig.py  validate_ssb_local_git_files.py
src/kvakk_git_tools/recommended/: gitconfig-dapla  gitconfig-prod-linux
ssb-gitconfig/: ssb-gitconfig.py
ssb-gitconfig/src/: Platform.py  ssb-gitconfig.py
tests/: __init__.py  test_ssb_gitconfig.py  test_validate_gitconfig.py  test_validate_local_git_files.py
tests/test_files/: config_with_extra_dapla.test  config_with_extra_dapla_lab.test  fully_configured_git.test  fully_configured_git_dapla_lab.test  gitattributes.test  gitignore.test  partial_user_configuration_dapla.test  partial_user_configuration_dapla_lab.test
