[tool.poetry]
name = "kvakk-git-tools"
version = "0.1.0"
description = "Recommended git config and git scripts for Statistics Norway."
authors = ["Arne Sørli <81353974+arneso-ssb@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "kvakk_git_tools"}]

[tool.poetry.dependencies]
python = "^3.10"
wheel = "^0.37.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.8.0"}
isort = "^5.10.1"
mypy = "^0.971"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
pre-commit-hooks = "^4.3.0"
darglint = "^1.8.1"
pylint = "^2.15.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.pylint.format]
max-line-length = "88"
