[tool.poetry]
name = "kvakk-git-tools"
version = "2.2.3"
description = "Recommended git config and git scripts for Statistics Norway."
authors = ["Arne Sørli <81353974+arneso-ssb@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "kvakk_git_tools" }]

[tool.poetry.scripts]
kvakk-git-tools = "kvakk_git_tools.ssb_gitconfig:run"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = { extras = ["d"], version = ">=22.8.0" }
darglint = ">=1.8.1"
flake8 = ">=5.0.4"
flake8-bandit = ">=4.1.1"
flake8-bugbear = ">=22.9.23"
flake8-docstrings = ">=1.6.0"
isort = ">=5.10.1"
mypy = ">=1.0.0"
pre-commit = ">=2.20.0"
pre-commit-hooks = ">=4.3.0"
pylint = ">=2.15.3"
bump2version = "*"
pytest = ">=7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.pylint.format]
max-line-length = "88"

[tool.pylint."MESSAGES CONTROL"]
disable = "C0103,W1514"
